# ml_edm

./: .gitignore  Demo ml_edm.ipynb  Get Started.ipynb  README.md  pyproject.toml
doc/: conf.py  index.rst
ml_edm/: Demo ml_edm.ipynb  classification.py  dataset.py  trigger_models.py
src/ml_edm/: chrono_classifier.py  classification.py  config_params.json  cost_matrice.py  cost_matrices.py  dataset.py  deep_classifiers.py  early_classifier.py  features_extraction.py  metrics.py  run_exp.py  test.py  trigger_models.py  trigger_models_full.py  utils.py
src/ml_edm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ml_edm/classification/: __init__.py  _base.py  chrono_classifier.py  classifiers_collection.py
src/ml_edm/classification/features_engineering/: features_extraction.py
src/ml_edm/deep/: deep_classifiers.py  deep_models.py  modules.py
src/ml_edm/tests/: test_trigger.py
src/ml_edm/trigger/: __init__.py  _base.py  _calimera.py  _ecdire.py  _ecec.py  _economy.py  _edsc.py  _proba_threshold.py  _stopping_rule.py  _teaser.py  _timestamp_threshold.py
